@@ -1,3 +1,8 @@
+2012-03-22  Richard Henderson  <rth@redhat.com>
+
+	* jit.c (jit_read_code_entry): Compute alignment and offset of
+	int64_t member before computing entry_size.
+
 2012-03-22  Siva Chandra Reddy  <sivachandra@google.com>
 
 	Python scripting: Add new method Value.referenced_value to
